[package]
name = "hmdb"
version = "0.1.13"
edition = "2021"
license = "BSD-3-Clause"
description = "Typesafe, read optimized, transactional, persistent, in-memory, key-value store"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
uuid = { version = "0.8.1", features = ["v4", "serde"] }